# sphinx-md-setup

./: README.md  pyproject.toml  requirements.txt
docs/source/: TheZenOfPython.ipynb  attendee.md  conf.py  example_google.md  index.md  index.rst  modules.md  setup.md  todolist.md  usage.md
docs/source/addons/: snippets.py
docs/source/notebooks/: TheZenOfPython.ipynb
src/: attendee.py  example_google.py  setup.py
