[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.7.1,<4"]

[project]
name = "sphinx-next-level"
version = "0.1.0"
authors = [
    {name = "David Neivn", email = "content@davidjnevin.com"},
]
description = "taking Sphinx Documentation to the Next Level"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "stringcase ~=1.2.0",
]
